Fixed contact page

--- a/index.html
+++ b/index.html
@@ -101,26 +101,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="form-to-email.php">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<p>Whether you have a question or want to discuss something else, feel free to email me or send me a message on LinkedIn.</p>
+								<p><a href="mailto:hanne.salmi92@gmail.com"><button>Email me</button></a></p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/hannesalmi2/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/hannemsalmi" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
